feat: upgrade to new elasticsearch java api client